hphp/test/zend/good/ext/pdo/tests/pdorow.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('pdo')) die('skip');
}
